--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         const userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
         if (/android/i.test(userAgent)) {
-            window.location.href = "https://play.google.com/store/apps/details?id=com.tuapp.android";
+            window.location.href = "https://play.google.com/store/apps/details?id=com.ester.SO086";
         } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
             window.location.href = "https://apps.apple.com/es/app/ester-cat/id747776884";
         } else {
